Fixed Visible Words In Discover Page - Words words visible when not hovering on company card. Added -10em more to top position.

--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -156,7 +156,7 @@
     }
     .text-t-load {
         bottom: auto;
-        top: -10em;
+        top: -20em;
         transition: top .5s ease;
         background-color: rgba(0, 0, 0, 0);
         border-bottom-right-radius: 0;
